# customer-support-agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/: app_config.py  main.py  prompt_lib.py  schema.py
src/agents/: builder.py  nodes.py  run.py  types.py
src/agents/members/: billing_agent.py  general_info_agent.py  supervisor_agent.py  technical_agent.py
src/database_handler/: __init__.py  chunk_document.py  docling_handler.py  document_parser.py  embedding_handler.py  image_processor.py  mongodb_handler.py  qdrant_connector.py  search_handler.py
